# jobSearchAgents

./: .gitignore  README-job-sources.md  README.md  pyproject.toml  requirements.txt  setup.py  test_config.json
app/core/agents/: __init__.py  base_agent.py
app/tests/: conftest.py  pytest.ini  utils.py
backend/: .env.example  app.py  pytest.ini  requirements.txt  run_cv_parser_tests.sh
backend/blueprints/advanced_cv_parser/: __init__.py  routes.py
backend/blueprints/career_coach/: __init__.py  routes.py
backend/blueprints/job_search/: __init__.py  routes.py
backend/config/: job_sources_default.json
backend/services/advanced_cv_parser/: __init__.py  advanced_cv_parser.py
backend/services/career_coach/: __init__.py  career_coach_agent.py  conversation_flow.py
backend/services/document_parser/: __init__.py  document_parser.py
backend/services/job_search/: __init__.py  job_parser.py  job_search_agent.py  job_search_service.py  perplexity_client.py
backend/tests/: run_registry_tests.py  test_advanced_cv_parser.py  test_api_endpoints.py  test_career_coach_agent.py  test_conversation_flow.py  test_cv_parser_integration.py
docs/: index.md
docs/api-reference/: backend-api.md
docs/architecture/: agentic-user-flow.md  career-coach-agent.md  data-flows.md  job-search-agent.md  multi-agent-coordination.md  system-architecture.md
docs/development/: ai-service-integration.md  contributor-guide.md  feature-backlog.md  roadmap.md  updated_feature_backlog.md  updated_roadmap.md
docs/diagrams/: README.md  agentic-job-search-flow.mermaid
(+57 files in other folders)
